SPCXCFZB-940 / fix pending requests icon z-index

--- a/ckanext/spc/theme/public/base/less/search.less
+++ b/ckanext/spc/theme/public/base/less/search.less
@@ -109,6 +109,8 @@
             transform: translateY(-50%);
             transform-origin: 50%;
 
+            z-index: 50;
+
             .fa {
                 animation: rotate 1s infinite linear;
             }
